--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact</title>
+    <link rel="stylesheet" href="./CSS/stylecontact.css">
 </head>
 <body>
-    <h1>super titre</h1>
+    <div class="mail">
+        <h1>Mme AUDE AUGAREILS</h1>
+        <h2>Responsable clients</h2>
+        <p>mail:au.augareils@ohmyfood.com</p>
+    </div>
+    <div class="revenir">
+        <a href="acceuil.html"><p>Revenir à l'acceuil</p></a>
+    </div>
 </body>
 </html>
